--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+expand-region-el (0+git.2.28e0f5-1) unstable; urgency=low
+
+  * New upstream snapshot
+
+ -- Barak A. Pearlmutter <bap@debian.org>  Tue, 18 Sep 2012 13:08:50 +0100
+
 expand-region-el (0+git.1.d157d7f-1) unstable; urgency=low
 
   * Initial release (Closes: #685720)
