--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+expand-region-el (0.8.0-1) unstable; urgency=low
+
+  * New (official) upstream release
+
+ -- Barak A. Pearlmutter <bap@debian.org>  Fri, 28 Sep 2012 09:53:43 +0100
+
 expand-region-el (0+git.2.28e0f5-1) unstable; urgency=low
 
   * New upstream snapshot
