--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+expand-region-el (0.10.0-1) unstable; urgency=medium
+
+  * New upstream version
+  * Merge upstream fix for web-mode-expansions
+  * bump policy version (no changes needed)
+
+ -- Barak A. Pearlmutter <bap@debian.org>  Mon, 10 Feb 2014 12:36:27 +0000
+
 expand-region-el (0.9.0+2013.10.19-1) unstable; urgency=low
 
   * Track upstream development snapshot
