--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+expand-region-el (0.10.0-3) unstable; urgency=low
+
+  * Remove xemacs21 support (closes: #739309)
+
+ -- Barak A. Pearlmutter <bap@debian.org>  Tue, 18 Feb 2014 10:51:48 +0000
+
 expand-region-el (0.10.0-2) unstable; urgency=low
 
   * emacsen-common compat file
