--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+expand-region-el (0.10.0-4) unstable; urgency=medium
+
+  * stylistic tweaks to debian/emacsen-install
+  * swizzle debian/watch to point directly to github
+
+ -- Barak A. Pearlmutter <bap@debian.org>  Sat, 08 Aug 2015 11:15:50 +0200
+
 expand-region-el (0.10.0-3) unstable; urgency=low
 
   * Remove xemacs21 support (closes: #739309)
