--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+expand-region-el (0.10.0-5) unstable; urgency=medium
+
+  * Enable sml-mode-expansions, as these work with sml-mode 6.0+.
+  * Bump standards version, no changes required.
+
+ -- Barak A. Pearlmutter <bap@debian.org>  Tue, 15 Sep 2015 14:03:07 +0100
+
 expand-region-el (0.10.0-4) unstable; urgency=medium
 
   * stylistic tweaks to debian/emacsen-install
