--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+expand-region-el (0.10.0-8) unstable; urgency=medium
+
+  * use dh --with elpa
+
+ -- Barak A. Pearlmutter <bap@debian.org>  Sun, 06 Dec 2015 15:42:38 +0000
+
 expand-region-el (0.10.0-7) unstable; urgency=medium
 
   * rebuild with dh-elpa 0.0.16 (closes: #803344)
