--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+expand-region-el (0.11.0-3) unstable; urgency=medium
+
+  * update packaging: versions, swizzle to salsa
+
+ -- Barak A. Pearlmutter <bap@debian.org>  Wed, 28 Mar 2018 17:06:51 +0100
+
 expand-region-el (0.11.0-2) unstable; urgency=medium
 
   * Rearrange dependencies
