--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+expand-region-el (0.11.0-5) UNRELEASED; urgency=medium
+
+  * Set upstream metadata fields: Repository, Repository-Browse.
+  * bump debhelper from old 11 to 13 and set in debhelper-compat
+  * push fortran support into quilt patch
+  * track post-tagged-release upstream changes, which seem to be rolling
+  * bump policy
+
+ -- Barak A. Pearlmutter <bap@debian.org>  Mon, 10 Aug 2020 11:53:18 +0100
+
 expand-region-el (0.11.0-4) unstable; urgency=medium
 
   [ Ondřej Nový ]
