--- a/debian/changelog
+++ b/debian/changelog
@@ -11,8 +11,9 @@ expand-region-el (0.11.0-5) unstable; urgency=medium
 
   [ David Bremner ]
   * Rebuild with dh-elpa 2.x
+  * Drop option single-debian-patch
 
- -- David Bremner <bremner@debian.org>  Tue, 26 Jan 2021 07:38:19 -0400
+ -- David Bremner <bremner@debian.org>  Tue, 26 Jan 2021 07:42:10 -0400
 
 expand-region-el (0.11.0-4) unstable; urgency=medium
 
