--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-expand-region-el (0.11.0+36-2) UNRELEASED; urgency=medium
+expand-region-el (1.0.0-1) unstable; urgency=medium
 
   [ David Krauser ]
   * Update maintainer email address
@@ -7,9 +7,10 @@ expand-region-el (0.11.0+36-2) UNRELEASED; urgency=medium
   * Drop emacs24 and emacs25 from Enhances (both removed in bullseye).
 
   [ Barak A. Pearlmutter ]
-  * Update standards version to 4.6.0, no changes needed.
+  * Update standards version to 4.6.2, no changes needed.
+  * New upstream version
 
- -- David Krauser <david@krauser.org>  Fri, 04 Oct 2019 14:56:39 -0400
+ -- Barak A. Pearlmutter <bap@debian.org>  Mon, 30 Oct 2023 15:16:09 +0000
 
 expand-region-el (0.11.0+36-1) unstable; urgency=medium
 
